deleted if block enclosing production setting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "node_modules/.bin/jest",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "all": "concurrently \"npm run server\" \"npm run client\""
+    "all": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,5 +30,8 @@
     "babel-jest": "^24.1.0",
     "cors": "^2.8.5",
     "jest": "^24.1.0"
+  },
+  "engines": {
+    "node": "10.15.1"
   }
 }
